# IssuePilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  lucide-react.d.ts
src/issuepilot/: __init__.py  api.py  cli.py  config.py  db.py  domain.py  logging.py  models.py  schemas.py
src/issuepilot/services/: bundles.py  github.py  overnight.py  ranking.py  repository.py  solve.py
src/issuepilot/workflows/: __init__.py  contracts.py
tests/: test_bundles.py  test_ranking.py  test_repository.py  test_solve.py
