[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "issuepilot"
version = "0.1.0"
description = "An overnight GitHub issue scout and Codex handoff tool."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "IssuePilot contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.10,<3",
  "httpx>=0.28,<1",
  "typer>=0.15,<1",
  "rich>=13.9,<15",
  "gitpython>=3.1,<4",
  "pygithub>=2.5,<3",
  "networkx>=3.4,<4",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "ruff>=0.9,<1"]

[project.scripts]
issuepilot = "issuepilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/issuepilot"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

